# portal2

./: .dockerignore  .env  .env.build  .env.example  .env.template  .gitignore  Dockerfile  ENV_SETUP.md  README.md  build-with-podman.sh  build.sh  config.template.json  next.config.js  package-lock.json  package.json  portal2.template.json
.github/workflows/: build-push-docker.yml  docker.yml
k8s/: portal2.yml
src/: server.js  theme.js
src/api/: async.js  forms.js  mailing_lists.js  public.js  services.js  tests.js  users.js  workshops.js
src/components/: AdminPasswordResetCard.js  ConfirmationDialog.js  ContactsEditor.js  Conversations.js  CopyToClipboardButton.js  CustomIntercom.js  Dashboard.js  DataLimitAnnouncement.js  DateRange.js  Dialogs.js  ErrorAnimation.js  ErrorAnimation500.js  Form.js  FormikCheckboxWithLabel.js  HelpCard.js  Layout.js  LoadingLayout.js  LoadingSpinner.js  MailingListForm.js  MainLogo.js  QuestionsEditor.js  ResourcesEditor.js  Section.js  ServiceActionButton.js  ServicesList.js  SideBar.js  SummaryCard.js  TabPanel.js  TopBar.js  User.js  WelcomeAnimation.js  WelcomeBanner.js  index.js  menuItems.js
src/constants/: client.js  server.js
src/contexts/: api.js  config.js  error.js  keycloak.js  success.js  user.js
src/lib/: apiClient.js  env.js  misc.js
src/pages/: 404.js  500.js  _app.js  _document.js  account.js  (+9 more)
src/scripts/db_schema_validator/: README.md  pyproject.toml  validate_schema.py
src/scripts/db_schema_validator/db_schema_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+120 files in other folders)
