[project]
name = "db-schema-validator"
version = "1.0.0"
description = "Database schema validation tool for Portal2"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "argparse>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []

[project.scripts]
validate-schema = "validate_schema:main"